[package]
name = "st7735s"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0"
embedded-graphics = "0.8"
embedded-hal-bus = "0.3.0"
display-interface = "0.5"
display-interface-spi = "0.5.0"

[dev-dependencies]
#stm32h7xx-hal = { version = "0.16.0", features = ["stm32h750v", "rt"] }
rp-pico = "0.9"
defmt-rtt = "0.4"
embedded-hal-compat = "0.13.0"
panic-probe = "0.3.2"
tinybmp = "0.6.0"

[lib]
name = "st7735s"
path = "src/lib.rs"

[[example]]
name = "pico"
path = "examples/pico.rs"

[[example]]
name = "stm32"
path = "examples/stm32.rs"

[workspace]
members = [
    "examples/pico-example",
    "examples/stm32h7-example",
]