[package]
name = "pico-example"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0"
embedded-graphics = "0.8"
embedded-hal-bus = "0.3.0"
display-interface = "0.5"
display-interface-spi = "0.5.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = "0.3.2"
panic-halt = "0.2"
st7735s = { path = "../.." }
rp-pico = "0.9"
defmt-rtt = "0.4"
tinybmp = "0.6.0"
