[package]
name = "stm32h7-example"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0"
embedded-graphics = "0.8"
embedded-hal-bus = "0.3.0"
display-interface = "0.5"
display-interface-spi = "0.5.0"
st7735s = { path = "../.." }
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h750v", "rt"] }
embedded-hal-compat = "0.13.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-probe = "0.3.2"
tinybmp = "0.6.0"

